# syzygy-dna-fw

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson.options  shell.nix
.github/workflows/: ci.yml
cross/: ch32v003.ini  ch32v005.ini
ldscripts/: ch32v003.ld  ch32v005.ld
src/: ga_adc.cpp  ga_adc.hpp  i2c_target.cpp  i2c_target.hpp  main.cpp  meson.build  register_map.cpp  register_map.hpp  system_init.cpp  system_init.hpp
src/dna/: crc16.hpp  dna_blob.hpp  dna_content.cpp  dna_content.hpp
tests/: meson.build  test_crc16.cpp  test_dna_blob.cpp
tests/renode/: conftest.py  regs.py  smoke.resc  test_adc_address.py  test_dna_blob.py  test_i2c_irq.resc  test_i2c_model.resc
tools/: dna_example.yaml  dna_patch.py  flash.sh
